CCMSPUI-808 | Updated data claims API spec with latest version, updated how ImportInProgressController handles redirect using new Submission status
