# claims-api-reference/open-api-specification.yml
@@ -26,6 +26,13 @@ paths:
         Upload a file (as multipart/form-data) containing data related to a submission.
         The file is converted into a JSON document and stored in the `bulk_submission` table.
         A 201 response is returned with a `Location` header containing the URI of the created record.
+      parameters:
+        - name: userId
+          in: query
+          required: true
+          description: The user ID of the user performing the bulk submission
+          schema:
+            type: string
       requestBody:
         required: true
         content:
@@ -58,18 +65,23 @@ paths:
                     type: string
                     format: uuid
                     description: UUID of the created bulk submission record.
-                  submission_id:
-                    type: string
-                    format: uuid
-                    description: UUID for the future submission record, will have to be sent back in a later call.
+                  submission_ids:
+                    type: array
+                    items:
+                      type: string
+                      format: uuid
+                    description: list of UUIDs for the future submission records (only one submission per bulk expected), will have to be sent back in a later call.
         '400':
           description: 'Bad request'
         '401':
           description: 'Unauthorized'
         '403':
           description: 'Forbidden'
+        '415':
+          description: 'Unsupported Media Type'
         '500':
           description: 'Internal server error'
+
   /api/v0/bulk-submissions/{id}:
     get:
       operationId: getBulkSubmission
@@ -282,7 +294,7 @@ paths:
       responses:
         '204':
           description: 'Submission status updated successfully'
-          content: {}
+          content: { }
         '400':
           description: 'Bad request'
         '401':
@@ -331,6 +343,10 @@ paths:
                           format: uuid
                         status:
                           type: string
+                          enum:
+                            - READY_TO_PROCESS
+                            - VALID
+                            - INVALID
                   matter_starts:
                     type: array
                     description: List of matter start IDs for this submission
@@ -418,11 +434,12 @@ paths:
       responses:
         '204':
           description: Claim updated successfully
-          content: {}
+          content: { }
         '400':
           description: Invalid request
         '404':
           description: Submission or claim not found
+
 
   /api/v0/validation-errors:
     get:
@@ -459,9 +476,16 @@ paths:
           description: 'Submission ID not found'
         '500':
           description: 'Internal server error'
-
 components:
   schemas:
+    BulkSubmissionStatus:
+      type: string
+      enum:
+        - READY_FOR_PARSING
+        - PARSING_COMPLETED
+        - PARSING_FAILED
+        - VALIDATION_FAILED
+        - REPLACED
     SubmissionPost:
       allOf:
         - $ref: '#/components/schemas/SubmissionFields'
@@ -475,6 +499,15 @@ components:
     SubmissionPatch:
       allOf:
         - $ref: '#/components/schemas/SubmissionFields'
+    SubmissionStatus:
+      type: string
+      enum:
+        - CREATED
+        - READY_FOR_VALIDATION
+        - VALIDATION_IN_PROGRESS
+        - VALIDATION_SUCCEEDED
+        - VALIDATION_FAILED
+        - REPLACED
     SubmissionFields:
       type: object
       description: submission details
@@ -496,14 +529,14 @@ components:
         area_of_law:
           type: string
           description: Area of law (e.g., "crime", "civil").
+        status:
+          $ref: "#/components/schemas/SubmissionStatus"
         schedule_number:
           type: string
-          nullable: true
           description: Optional schedule number.
         previous_submission_id:
           type: string
           format: uuid
-          nullable: true
           description: UUID of the previous submission that this replaces, if any.
         is_nil_submission:
           type: boolean
@@ -511,6 +544,9 @@ components:
         number_of_claims:
           type: integer
           description: Number of claims in this submission.
+        submitted:
+          type: date
+          description: Date the submission was submitted
 
     ClaimPost:
       allOf:
@@ -535,6 +571,10 @@ components:
       properties:
         status:
           type: string
+          enum:
+            - READY_TO_PROCESS
+            - VALID
+            - INVALID
         schedule_reference:
           type: string
         line_number:
@@ -595,6 +635,8 @@ components:
           type: string
         referral_source:
           type: string
+        total_value:
+          type: number
         client_forename:
           type: string
         client_surname:
