# laa-submit-a-bulk-claim-ui/src/main/java/uk/gov/justice/laa/bulkclaim/controller/ImportInProgressController.java
@@ -19,7 +19,7 @@ import org.springframework.web.reactive.function.client.WebClientResponseExcepti
 import uk.gov.justice.laa.bulkclaim.exception.SubmitBulkClaimException;
 import uk.gov.justice.laa.bulkclaim.service.claims.DataClaimsRestService;
 import uk.gov.justice.laa.claims.model.GetSubmission200Response;
-import uk.gov.justice.laa.claims.model.GetSubmission200ResponseClaimsInner;
+import uk.gov.justice.laa.claims.model.SubmissionStatus;
 
 /**
  * Controller for handling the import in progress page after a user has submitted a bulk claim.
@@ -34,8 +34,8 @@ public class ImportInProgressController {
 
   private final DataClaimsRestService dataClaimsRestService;
 
-  private final List<String> completedStatuses =
-      List.of("VALIDATION_SUCCEEDED", "VALIDATION_FAILED");
+  private final List<SubmissionStatus> completedStatuses =
+      List.of(SubmissionStatus.VALIDATION_SUCCEEDED, SubmissionStatus.VALIDATION_FAILED);
 
   /**
    * Shows the import in progress page, and refreshes every 5 seconds. Redirects if the submission
@@ -50,9 +50,9 @@ public class ImportInProgressController {
       Model model, @ModelAttribute(BULK_SUBMISSION_ID) UUID bulkSubmissionId) {
 
     // Check submission exists otherwise they will be stuck in a loop on this page.
-    GetSubmission200Response bulkSubmission;
+    GetSubmission200Response submission;
     try {
-      bulkSubmission = dataClaimsRestService.getSubmission(bulkSubmissionId).block();
+      submission = dataClaimsRestService.getSubmission(bulkSubmissionId).block();
     } catch (WebClientResponseException e) {
       if (e.getStatusCode().isSameCodeAs(HttpStatusCode.valueOf(404))) {
         log.debug("No submission found, will retry: %s".formatted(bulkSubmissionId.toString()));
@@ -64,25 +64,17 @@ public class ImportInProgressController {
 
     // Check submission. If the response from data claims API is 200, these fields
     //  should be not null.
-    Assert.notNull(bulkSubmission, "Submission is null");
-    Assert.notNull(bulkSubmission.getSubmission(), "Submission fields is null");
+    Assert.notNull(submission, "Submission is null");
+    Assert.notNull(submission.getSubmission(), "Submission fields is null");
 
     // Check for NIL submission
-    if (Boolean.TRUE.equals(bulkSubmission.getSubmission().getIsNilSubmission())) {
+    if (Boolean.TRUE.equals(submission.getSubmission().getIsNilSubmission())) {
       log.info("NIL submission found, will redirect: %s".formatted(bulkSubmissionId.toString()));
       return "redirect:/view-submission-summary";
     }
 
-    // Check submission has claims otherwise they will be stuck in a loop on this page.
-    Assert.notEmpty(
-        bulkSubmission.getClaims(),
-        "No claims found for bulk submission: %s".formatted(bulkSubmissionId.toString()));
-
-    boolean fullyImported =
-        bulkSubmission.getClaims().stream()
-            .map(GetSubmission200ResponseClaimsInner::getStatus)
-            .allMatch(completedStatuses::contains);
-    if (fullyImported) {
+    // Redirect if submission is complete
+    if (completedStatuses.contains(submission.getSubmission().getStatus())) {
       return "redirect:/view-submission-summary";
     }
     model.addAttribute("shouldRefresh", true);
